# profile-scraper

./: CLAUDE.md  Dockerfile  Makefile  UV_MIGRATION_TEST.md  compose.override.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: builder.yaml
app/: api.py
app/core/: config.py  database.py
app/services/: extract_malt_info.py  malt_scrapper.py  profile_service.py
tests/bruno/environments/: prod.bru
tests/bruno/profile/: profile.bru
