[project]
name = "profile-scraper"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.13.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.3",
    "black==24.2.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "coverage==7.6.12",
    "cryptography==44.0.1",
    "fastapi==0.110.0",
    "flake8==7.0.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "kaitaistruct==0.10",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mypy==1.9.0",
    "mypy-extensions==1.0.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.9",
    "pyasn1==0.6.1",
    "pycodestyle==2.11.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.1.0",
    "pyflakes==3.2.0",
    "pyopenssl==25.0.0",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "selenium==4.28.1",
    "selenium-wire==5.1.0",
    "setuptools==75.8.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.27",
    "starlette==0.36.3",
    "trio==0.29.0",
    "trio-websocket==0.12.1",
    "typing-extensions==4.12.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "websockets==15.0",
    "wsproto==1.2.0",
    "zstandard==0.23.0",
]
